--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "dexie": "^4.0.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
